Review Request 9822 see PLS-3979, PLS-4031, PLS-4015 - added error case for when enrichments can't be saved with message alert that dismisses itself instead of hanging - fixed case where attributes not enabled for sales teams were showing up on iframe - fixed bug with new boolean buckets display that only breaks in iframe

--- a/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
+++ b/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
@@ -1510,6 +1510,15 @@
                 }
             }
         }
+        &.error {
+            border-color: rgb(210, 32, 39);
+            .icon {
+                background: rgb(210, 32, 39);
+                &:after {
+                    @include font-awesome-inline("\f071");
+                }
+            }
+        }
         & > .close {
             position: absolute;
             top: 18px;
